Fixed the responsiveness on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ footer a {
     }
 
     .grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, 1fr);
         grid-gap: 32px;
     }
 
@@ -257,4 +257,9 @@ footer a {
     .embed {
         aspect-ratio: 16 / 9;
     }
+
+    .video-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
 }
